@@ -22,7 +22,7 @@ module ActiveScaffold
       private
 
       def link_for_attachment(attachment, column)
-        variant = column.options[:thumb] || ActiveScaffold::Bridges::ActiveStorage::ActiveStorageBridgeHelpers.thumbnail_variant
+        variant = column.options[:thumb] || ActiveScaffold::Bridges::ActiveStorage.thumbnail_variant
         content =
           if variant && attachment.variable? && column.options[:thumb] != false
             image_tag(attachment.variant(variant))
