@@ -2,6 +2,7 @@
 - Support adding settings for chosen and tinyMCE in initializer (ActiveScaffold.js_config) or JavaScript code (ActiveScaffold.config, needed for callbacks)
 - Support ruby 3.0
 - Check action link security method in process_action_link_action with no id
+- Add thumbnail_variant setting to ActiveStorage bridge
 
 = 3.6.3
 - Fix search on nested or embedded lists with rails_ujs
